--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.1",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "hls.js": "^1.5.3",
     "vue": "^3.3.11"
   },
